...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">


                <RelativeLayout
                    android:id="@+id/rlRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">


                    <android.support.design.widget.FloatingActionButton
...
                        android:clickable="true"
                        app:backgroundTint="#00CD00"
                        app:fabSize="mini"
                        app:srcCompat="@drawable/ic_done_all_black_24dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/floatingDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="28dp"
                        android:layout_marginRight="30dp"
                        android:layout_toLeftOf="@+id/floatingConfirmEdit"
...
