...
                    android:src="@drawable/ic_face_black_24dp"/>


            <!-- Name field -->
            <EditText
                android:layout_marginLeft="8dp"
                android:id="@+id/username"
                android:hint="@string/user_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            </LinearLayout>

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="90dp"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_done_all_black_24dp"
                android:id="@+id/floatingConfirmEditProfile"
                android:layout_gravity="right"/>





...
